feat: debounce filter-rows logging

--- a/src/App/app.css
+++ b/src/App/app.css
@@ -7,7 +7,7 @@
   cursor: pointer;
 }
 
-.sheets-table .sheets-table__row--selected {
+.sheets-table tr.sheets-table__row--selected {
   background-color: lightblue;
 }
 
