--- a/src/App/index.html
+++ b/src/App/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../../node_modules/tachyons/css/tachyons.min.css"></link>
   <link rel="stylesheet" href="app.css"></link>
 </head>
-<body className="" style="box-sizing: border-box; overflow: hidden; background-color: rgba(0,0,0,0); margin: 0" >
+<body style="box-sizing: border-box; overflow: hidden; background-color: rgba(0,0,0,0); margin: 0" >
   <div id="App"></div>
 </body>
 
