--- a/src/App/index.html
+++ b/src/App/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="app.css"></link>
 </head>
 
-<body style="box-sizing: border-box; overflow: hidden; background-color: rgba(0,0,0,0); margin: 0">
+<body style="box-sizing: border-box; overflow: hidden; background-color: #f4f4f4; margin: 0">
   <div id="App"></div>
 </body>
 
