--- a/src/App/app.css
+++ b/src/App/app.css
@@ -42,12 +42,17 @@ body {
 .pdf-list {
   height: 100%;
   align-items: center;
-  max-height: 60vh;
+  max-height: 70vh;
   overflow: auto;
 }
 
 .pdf {
   height: 33%;
+}
+
+.pdf-title {
+  max-height: 3rem;
+  overflow: hidden;
 }
 
 .action-panel {
@@ -80,6 +85,14 @@ body {
 
 .mw-12rem {
   max-width: 12rem;
+}
+
+.mw-6rem {
+  max-width: 6rem;
+}
+
+.w-45 {
+  width: 45%;
 }
 
 .isLoading {
