--- a/src/App/app.css
+++ b/src/App/app.css
@@ -39,6 +39,14 @@ body {
   background-color: lightblue;
 }
 
+.sheets-table__actions {
+  max-height: 50px;
+}
+
+.refresh-icon {
+  width: 1.5rem;
+}
+
 .pdf-list {
   height: 100%;
   align-items: center;
@@ -107,4 +115,79 @@ body {
   to {
     opacity: 1;
   }
+}
+
+/**
+ *  Data Grid styles
+ */
+
+.GridRow {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+}
+.GridColumn {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+.LeftSideGridContainer {
+  flex: 0 0 50px;
+}
+
+.body-grid {
+  width: 100%;
+  border: 1px solid #e0e0e0;
+}
+
+.evenRow,
+.oddRow {
+  border-bottom: 1px solid #e0e0e0;
+}
+.oddRow {
+  background-color: #fafafa;
+}
+
+.cell,
+.header-cell {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 0.5em;
+}
+
+.cell {
+  border-right: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.header-cell {
+  font-weight: bold;
+  border-right: 1px solid #e0e0e0;
+}
+
+.centered-cell {
+  align-items: center;
+  text-align: center;
+}
+
+.letter-cell {
+  font-size: 1.5em;
+  color: #fff;
+  text-align: center;
+}
+
+.no-content-cell {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* font-size: 1em; */
+  color: #bdbdbd;
 }
