--- a/src/App/app.css
+++ b/src/App/app.css
@@ -39,6 +39,14 @@ body {
   background-color: lightblue;
 }
 
+.striped:nth-child(odd) {
+  background-color: white;
+}
+
+.striped:nth-child(even) {
+  background-color: hsla(0, 0%, 100%, 0.2);
+}
+
 .table-actions {
   max-height: 50px;
 }
@@ -70,16 +78,12 @@ body {
   align-items: center;
 }
 
-.striped:nth-child(odd) {
-  background-color: white;
-}
-
-.striped:nth-child(even) {
-  background-color: hsla(0, 0%, 100%, 0.2);
+.fill-em {
+  border: 0;
 }
 
 .disabled {
-  background-color: rgba(76, 100, 131, 0.75);
+  /* background-color: rgba(76, 100, 131, 0.75); */
   cursor: not-allowed;
 }
 
